--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,76 @@
+/* For root */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /* google fonts "Fire Sans" connect here  */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.font-fire-sans{
-    font-family: "Poppins", sans-serif;
+
+.font-fira-sans{
+    font-family: "Fira Sans", sans-serif;
+}
+/* Shared styles here */
+.website-border{
+    max-width: 72rem;
+    max-height: 35rem;
+    margin: 0 auto;
+}
+
+.btn-primary{
+    color: rgba(0, 106, 80, 1);
+    padding: 13px 26px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    background-color: #fff;
+    border: 1px solid rgba(0, 106, 80, 1);
+    cursor: pointer;
+}
+
+/* nav bar style here */
+.nav-container{
+    margin-top: 30px;
+}
+.nav-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-menu h3{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+}
+/* Hero Section start here  */
+#hero{
+    margin-top: 4.75rem;
+    border-radius: 24px;
+    background: rgba(198, 228, 214, 1);
+    padding: 80px 100px 80px 100px;
+}
+.hero-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+}
+.hero-description h4{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+    color: rgba(14, 14, 14, 0.5);
+    margin-bottom: 16px;
+}
+.hero-description h1{
+    font-size: 3.1rem;
+    line-height: 67px;
+    font-weight: 700;
+    color: rgba(14, 14, 14, 1);
+    margin-bottom: 1.4rem;
+}
+.hero-description button{
+    background-color: rgba(0, 106, 80, 1);
+    color: #fff;
 }
