--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 1.3rem;
 }
-.cards{
+.cards, #yunus{
     padding: 24px;
     border: 1px solid rgba(14, 14, 14, 0.15);
     background: rgba(255, 255, 255, 1);
@@ -161,4 +161,19 @@
     color: #fff;
     border: none;
     margin-top: 1.5rem;
+}
+/* Yunus section style */
+#yunus{
+    margin-top: 2.5rem;
+}
+.over-quote{
+    margin-top: -42px;
+}
+.yunus-name{
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 600;
+    color: rgba(14, 14, 14, 0.8);
+    margin-top: 12px;
+    margin-bottom: 5px;
 }
